--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: lwander.github.io
+title: www.larswander.com
 email: notmine@lwander.com
 description: >
   Math & Computers
 baseurl: "" 
-url: "http://lwander.github.io" # the base hostname & protocol for your site
+url: "https://www.larswander.com" # the base hostname & protocol for your site
 github_username: lwander
 
 # Build settings
